# dotenv

./: README.md  pyproject.toml
dotenv/: __init__.py  __main__.py  dotenv.py
tests/: test_dotenv.py  test_main.py
